# studysync-backend

./: .env  .env.example  .gitignore  models.py  s3_service.py
backend/: .dockerignore  Dockerfile  database.py  main.py  models.py  requirements.txt  s3_service.py  studysync.db
backend/uploads/: default_key
cli/: README.md  notes.txt  pyproject.toml  test.txt
cli/study_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/studysync/: __init__.py  __main__.py  _pathfix.py  constants.py  local_state.py  main.py  sync_engine.py
s3_store/workspaces/808fdc8c-c9dc-4fbb-963b-4feaa6d155e5/a_file.txt/: v1
uploads/: workspaces_de1e46f1-0f1f-4c1f-9731-f95808cf7569_test.txt_v1
