[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "study_sync"
version = "1.1.8"
description = "Offline-first distributed workspace sync CLI."
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.scripts]
study = "studysync.main:app"
